selfie page change and successfull page change

--- a/css/faceki-sign-in.css
+++ b/css/faceki-sign-in.css
@@ -9,7 +9,7 @@
   margin: 0px;
   min-height: 823px;
   min-width: 414px;
-  position: relative;
+  /*position: relative;*/
   width: 100%;
 }
 .faceki-sign-in .balance-C61RwL {
